[package]
name = "kms-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.0", features = ["signers"] }
alloy-signer = "0.11.0"
asn1 = "0.20.0"
async-trait = "0.1.86"
base64 = "0.22.1"
chrono = "0.4.39"
digest = "0.10.7"
ecdsa = "0.16.9"
eyre = "0.6.12"
jsonwebtoken = "9.3.1"
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
pem = "3.0.4"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
serde_json = "1.0.138"
solana-sdk = "^2.1.0"
solana-client = "^2.1.0"
spki = { version = "0.7.3", features = ["pem"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
